
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB cproj_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c )
FILE( GLOB cproj_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(cproj STATIC
            ${cproj_HEADER_FILES}
            ${cproj_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(cproj PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${cproj_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${cproj_HEADER_FILES})

SET_TARGET_PROPERTIES(cproj
                    PROPERTIES PUBLIC_HEADER "${headers}")

SET_TARGET_PROPERTIES(cproj PROPERTIES
ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cproj PROPERTIES 
LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cproj PROPERTIES
RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
